# python-example-package

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/example_python_package/: __init__.py  __main__.py  example_python_package.py  simple_submodule.py
src/example_python_package/complex_submodule/: complex_submodule1a.py  complex_submodule1b.py
src/python_example_package/: __init__.py  __main__.py  python_example_package.py  simple_submodule.py
src/python_example_package/complex_submodule/: complex_submodule1b.py
tests/: test_example_python_package.py
